--- a/public/views/book.ejs
+++ b/public/views/book.ejs
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <title>Book</title>
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
     <h1> <%= book.title %> </h1>
