--- a/public/views/books.ejs
+++ b/public/views/books.ejs
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <title>Books</title>
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
     <h1>Books</h1>
