--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -1,17 +1,15 @@
-<!--book.ejs-->
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
     <title>Create Book</title>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="../css/style.css"/>
 </head>
 <body>
-    <h1>Create Book</h1>
-    <form action="/create" method="post">
-        <label for="title">Title:</label>
+    <form method="post" action="/create">
+        <label for="title">Title</label>
         <input type="text" id="title" name="title">
         <br>
-        <label for="author">Author:</label>
+        <label for="author">Author</label>
         <input type="text" id="author" name="author">
         <br>
         <input type="submit" value="create">
@@ -19,4 +17,3 @@
     <a href="/">Back to List</a>
 </body>
 </html>
-
