--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -2,7 +2,7 @@
 <html >
 <head>
     <title>Create Book</title>
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="public/css/style.css"/>
 </head>
 <body>
     <form method="post" action="/create">
